update timit ex

--- a/ch4_class/ex_timit-2-pyspch.ipynb
+++ b/ch4_class/ex_timit-2-pyspch.ipynb
@@ -79,6 +79,12 @@
     "\n",
     "import pyspch\n",
     "import pyspch.nn\n",
+    "\n",
+    "# reproducibility \n",
+    "torch.manual_seed(0) \n",
+    "np.random.seed(0)\n",
+    "\n",
+    "# logging (see pyspch.nn.train())\n",
     "logging.basicConfig(level=logging.DEBUG)\n"
    ]
   },
@@ -168,7 +174,10 @@
     "y_test =np.full((600,),'a',dtype='<U2')\n",
     "y_test[200:400] =np.full((200,),'i',dtype='<U2')\n",
     "y_test[400:600] =np.full((200,),'uw',dtype='<U2')\n",
-    "classes = np.unique(y_train)"
+    "classes = np.unique(y_train)\n",
+    "\n",
+    "# load_data('tinytimit')\n",
+    "#   data = (X_train, X_test, y_train, y_test)"
    ]
   },
   {
@@ -545,26 +554,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2400"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_ds.__len__()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -625,7 +614,7 @@
     "scheduler = None # learning rate scheduler\n",
     "\n",
     "# variations\n",
-    "batch_sizes = [2400, 128, 128]\n",
+    "batch_sizes = [2400, 128, 128] # 2400 = full batch\n",
     "patiences = [float('inf'), float('inf'), 20]\n",
     "val_fracs = [0, 0, 0.1]\n",
     "names = ['batch', 'mini-batch', 'mini-batch with early stopping']\n",
